--- a/converter/.env
+++ b/converter/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=bb6221d527fb1e081957984341ccb509
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+APP_SECRET=64eeb13cbe014c59ae0608ebae5ec2d1
+#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
