--- a/converter/composer.json
+++ b/converter/composer.json
@@ -2,14 +2,14 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.0.8",
+        "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "3.4.*",
-        "symfony/dotenv": "3.4.*",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "3.4.*",
-        "symfony/yaml": "3.4.*"
+        "symfony/framework-bundle": "4.4.*",
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
     },
@@ -33,6 +33,7 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
     },
@@ -54,7 +55,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "3.4.*"
+            "require": "4.4.*"
         }
     }
 }
