--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,6 @@ services:
       context: .
       dockerfile: docker/php/Dockerfile
     restart: on-failure
+    volumes:
+      - './converter/:/usr/src/app'
 #    user: 1000:1000
