--- a/converter/config/services.yaml
+++ b/converter/config/services.yaml
@@ -23,5 +23,7 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    published_message.listener:
+        class: 'App\EventListener\PublishedMessageExceptionListener'
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
