Add slashes as valid utc parameter

--- a/converter/config/routes.yaml
+++ b/converter/config/routes.yaml
@@ -2,6 +2,8 @@ index:
     path:       /{utc}
     controller: App\Controller\ApiController::getTime
     methods:    GET
+    requirements:
+        utc: .+
     defaults:
         {
             utc: now
